--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,5 +1,4 @@
 ---
-import { useState, useEffect } from 'react';
 import Cobe from "@components/cobe.astro";
 ---
 
@@ -87,7 +86,7 @@ import Cobe from "@components/cobe.astro";
     </svg>
   </div>
 	<div class="flex justify-center items-center mt-4 md:mt-8">
-	<table class="table-auto border-collapse border  dark:text-slate-400 border-gray-400 mt-8">
+	<table class="table-auto border-collapse border  dark:text-white border-gray-400 mt-8">
 		<thead>
 			<tr>
 				<th class="border border-gray-300 px-4 py-2">N.º</th>
@@ -132,8 +131,23 @@ import Cobe from "@components/cobe.astro";
         ))}
       </tbody>
 	</table>
+
+
 </div>
 </div>
+<!-- TODO -->
+<!-- https://fantasy.formula1.com/feeds/drivers/1_en.json?buster=20250316135258 -->
+<!-- LIGA -->
+<!-- https://fantasy.formula1.com/services/user/leaderboard/26340306-fe6b-11ef-bafd-f9277be0d6f5/pvtleagueuserrankget/1/695505/0/1/1/10/?buster=1742395047668 -->
+<!-- CADA UNO -->
+<!-- https://fantasy.formula1.com/services/user/opponentteam/opponentgamedayplayerteamget/1/e7d3d5b2-fe71-11ef-bfc1-8f273b7b7e8d-0-156785025/1/1/1?buster=1742393577687
+https://fantasy.formula1.com/services/user/opponentteam/opponentgamedayplayerteamget/1/26340306-fe6b-11ef-bafd-f9277be0d6f5-0-156776409/1/1/1?buster=1742393622681
+https://fantasy.formula1.com/services/user/opponentteam/opponentgamedayplayerteamget/1/f729c398-fe6f-11ef-be7f-2f9b458b67c0-0-156782678/1/1/1?buster=1742393637798
+https://fantasy.formula1.com/services/user/opponentteam/opponentgamedayplayerteamget/1/ca241704-fe6f-11ef-aa57-6dc464d2868e-0-177873983/1/1/1?buster=1742393652681
+https://fantasy.formula1.com/services/user/opponentteam/opponentgamedayplayerteamget/1/eb86f662-fe80-11ef-87ed-6fdff2e0d3e1-0-156781750/1/1/1?buster=1742393652681
+https://fantasy.formula1.com/services/user/opponentteam/opponentgamedayplayerteamget/1/2e7ac292-00bf-11f0-b739-d5ca545f3999-0-156778006/1/1/1?buster=1742393667678
+https://fantasy.formula1.com/services/user/opponentteam/opponentgamedayplayerteamget/1/fbe1cfae-0106-11f0-b6cc-a5749b1801ef-0-156784923/1/1/1?buster=1742393682803 -->
+
 
 <style>
   @keyframes slide {
