--- a/src/components/cobe.astro
+++ b/src/components/cobe.astro
@@ -2,7 +2,7 @@
 const globeMaxSize = 500;
 ---
 <h2>
-	<span id="nombre" class="text-primary text-2xl dark:text-white"></span>
+	<span id="nombre" class="dark:text-blue-400"></span>
 </h2>
 <canvas id="cobe" width={globeMaxSize} height={globeMaxSize} class="dark:opacity-100"></canvas>
 
@@ -34,16 +34,16 @@ const globeMaxSize = 500;
 		{ location: [45.5005, -73.5221], size: 0.05, name: "Gran Premio de Canadá, Circuito Gilles Villeneuve Montreal, 13 al 15 de junio", endDate: new Date("2025-06-15") },
 		{ location: [47.2197, 14.7647], size: 0.05, name: "Gran Premio de Austria, Red Bull Ring Spielberg, 27 al 29 de junio", endDate: new Date("2025-06-29") },
 		{ location: [52.0786, -1.0169], size: 0.05, name: "Gran Premio de Gran Bretaña, Circuito de Silverstone, 4 al 6 de julio", endDate: new Date("2025-07-06") },
-		{ location: [50.4372, 5.9714], size: 0.05, name: "Gran Premio de Bélgica, Circuito de Spa-Francorchamps, 1 al 3 de agosto", endDate: new Date("2025-08-03") },
-		{ location: [47.5789, 19.2486], size: 0.05, name: "Gran Premio de Hungría, Hungaroring, 18 al 20 de julio", endDate: new Date("2025-07-20") },
-		{ location: [52.3888, 4.5409], size: 0.05, name: "Gran Premio de los Países Bajos, Circuito de Zandvoort, 22 al 24 de agosto", endDate: new Date("2025-08-24") },
+		{ location: [50.4372, 5.9714], size: 0.05, name: "Gran Premio de Bélgica, Circuito de Spa-Francorchamps, 25 al 27 de julio", endDate: new Date("2025-07-27") },
+		{ location: [47.5789, 19.2486], size: 0.05, name: "Gran Premio de Hungría, Hungaroring, 01 al 03 de agosto", endDate: new Date("2025-08-03") },
+		{ location: [52.3888, 4.5409], size: 0.05, name: "Gran Premio de los Países Bajos, Circuito de Zandvoort, 29 al 31 de agosto", endDate: new Date("2025-08-31") },
 		{ location: [45.6156, 9.2811], size: 0.05, name: "Gran Premio de Italia, Autodromo Nazionale di Monza, 5 al 7 de septiembre", endDate: new Date("2025-09-07") },
 		{ location: [40.3725, 49.8533], size: 0.05, name: "Gran Premio de Azerbaiyán, Circuito de Bakú, 19 al 21 de septiembre", endDate: new Date("2025-09-21") },
 		{ location: [1.2914, 103.8644], size: 0.05, name: "Gran Premio de Singapur, Circuito de Marina Bay, 3 al 5 de octubre", endDate: new Date("2025-10-05") },
 		{ location: [30.1328, -97.6411], size: 0.05, name: "Gran Premio de Estados Unidos, Circuito de las Américas, 17 al 19 de octubre", endDate: new Date("2025-10-19") },
 		{ location: [19.4042, -99.0907], size: 0.05, name: "Gran Premio de México, Autódromo Hermanos Rodríguez, 24 al 26 de octubre", endDate: new Date("2025-10-26") },
 		{ location: [-23.7036, -46.6997], size: 0.05, name: "Gran Premio de São Paulo, Autódromo José Carlos Pace, 7 al 9 de noviembre", endDate: new Date("2025-11-09") },
-		{ location: [36.1147, -115.1698], size: 0.05, name: "Gran Premio de Las Vegas, Circuito de Las Vegas, 21 al 23 de noviembre", endDate: new Date("2025-11-23") },
+		{ location: [36.1147, -115.1698], size: 0.05, name: "Gran Premio de Las Vegas, Circuito de Las Vegas, 20 al 22 de noviembre", endDate: new Date("2025-11-22") },
 		{ location: [25.4903, 51.4542], size: 0.05, name: "Gran Premio de Catar, Circuito Internacional de Losail, 28 al 30 de noviembre", endDate: new Date("2025-11-30") },
 		{ location: [24.4672, 54.6031], size: 0.05, name: "Gran Premio de Abu Dabi, Circuito Yas Marina, 5 al 7 de diciembre", endDate: new Date("2025-12-07") }
 	];
@@ -56,7 +56,7 @@ const globeMaxSize = 500;
 		let size = globeMaxSize;
 		const { innerWidth: width } = window;
 		if (width < globeMaxSize) {
-			size = width - 300;
+			size = width - 25;
 		}
 		return size;
 	}
@@ -70,15 +70,15 @@ const globeMaxSize = 500;
 			width: globeSize,
 			height: globeSize,
 			phi: 0,
-			theta: 0,
+			theta: 0.3,
 			dark: 1,
-			diffuse: 1.5,
+			diffuse: 3,
 			scale: 1,
-			mapSamples: 25000,
+			mapSamples: 16000,
 			mapBrightness: 12,
-			baseColor: [0.3, 0.3, 0.3],
+			baseColor:[1, 1, 1],
 			markerColor: [1, 0.1, 0],
-			glowColor: [0, 0.5, 1],
+			glowColor: [1.2, 1.2, 1.2],
 			offset: [0, 0],
 			opacity: 1,
 			markers: markers,
@@ -98,8 +98,7 @@ const globeMaxSize = 500;
 				state.height = globeSize;
 				state.markers = markers.map(marker => ({
 					...marker,
-					color: marker.color || [1, 0.1, 0] // Default color if not set
-				})); // Ensure markers are updated
+				})); 
 			},
 		});
 
@@ -112,11 +111,10 @@ const globeMaxSize = 500;
 	setInterval(() => {
 		if (previousMarkerIndex !== null) {
 			markers[previousMarkerIndex].size = 0.05; // Revert the size of the previous marker
-			delete markers[previousMarkerIndex].color; // Revert the color of the previous marker
+			
 		}
 		const marker = markers[currentMarkerIndex];
 		marker.size = 0.1; // Change the size of the current marker
-		marker.color = [0, 0.5, 1]; // Change the color of the current marker
 		focusRef.current = locationToAngles(marker.location[0], marker.location[1]);
 		document.getElementById("nombre").textContent = marker.name; // Update the text content of the span
 		previousMarkerIndex = currentMarkerIndex;
