Update navbar component to correct class name and rename link for classification

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -12,13 +12,13 @@ export const menuitems = [
 >
   <di class="p-4 flex flex-row items-center justify-between">
     <a
-	
+      href="/"
       class="flex gap-3 items-center text-lg font-semibold tracking-widest text-gray-900 uppercase rounded-lg dark:text-white focus:outline-none focus:shadow-outline"
     >
       <Icon name="logo" width="50" class="dark:invert" />
       F1 2025
     </a>
-    <Link href="/clasificacion">Cl</Link>
+    <Link href="/clasificacion">Puntos</Link>
 		<div class="flex justify-end gap-3">
 			<Themeselector />
 		</div>
