Fix body text color in Layout component for improved visibility

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ import "@fontsource-variable/inter";
 
 		
 	</head>
-	<body class="dark:bg-stone-950 h-dvh justify-center items-center text-[8px]
+	<body class="text-black dark:bg-stone-950 h-dvh justify-center items-center text-[8px]
 	min-[375px]:text-[10px]
 	min-[425px]:text-[12px]">
 		<Navbar />
