Refactor globe size calculation and clean up container component; remove unused prueba component

--- a/src/components/cobe.astro
+++ b/src/components/cobe.astro
@@ -56,7 +56,7 @@ const globeMaxSize = 500;
 		let size = globeMaxSize;
 		const { innerWidth: width } = window;
 		if (width < globeMaxSize) {
-			size = width - 25;
+			size = width ;
 		}
 		return size;
 	}
