--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import Container from "@components/container.astro";
 import Hero from "@components/hero.astro";
+import TablaTotal from "@components/tablaTotal.astro";
 import Layout from "@layouts/Layout.astro";
 ---
 <Layout title="Temporada 2025" lang="es">
 	<Container>
 		<Hero />
+		<TablaTotal/>
 	</Container>
 </Layout>
