Add Prueba component for displaying grouped data from CSV and update index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,13 @@
 ---
 import Container from "@components/container.astro";
 import Hero from "@components/hero.astro";
+import Prueba from "@components/Prueba.astro";
 import TablaTotal from "@components/tablaTotal.astro";
 import Layout from "@layouts/Layout.astro";
 ---
 <Layout title="Temporada 2025" lang="es">
 	<Container>
 		<Hero />
-		<TablaTotal/>
+		<Prueba/>
 	</Container>
 </Layout>
